[gd_scene load_steps=2 format=3 uid="uid://odfsqybsjqxp"]

[ext_resource type="Script" path="res://debug_node.gd" id="1_q533o"]

[node name="DebugWindow" type="Node2D"]
visible = false
script = ExtResource("1_q533o")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 222.0
offset_bottom = 93.0

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
text = "Debug"

[node name="Debug" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
columns = 2

[node name="NewDeckButton" type="Button" parent="VBoxContainer/Debug"]
layout_mode = 2
text = "make new deck"

[node name="DrawCardButton" type="Button" parent="VBoxContainer/Debug"]
layout_mode = 2
text = "Draw Card"

[node name="NewHandButton" type="Button" parent="VBoxContainer/Debug"]
layout_mode = 2
text = "new hand
"

[node name="ShuffleAllButton" type="Button" parent="VBoxContainer/Debug"]
layout_mode = 2
text = "shuffle all
"

[connection signal="gui_input" from="VBoxContainer/PanelContainer" to="." method="_on_panel_container_gui_input"]
[connection signal="pressed" from="VBoxContainer/Debug/NewDeckButton" to="." method="_on_new_deck_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Debug/DrawCardButton" to="." method="_on_draw_card_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Debug/NewHandButton" to="." method="_on_new_hand_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Debug/ShuffleAllButton" to="." method="_on_shuffle_all_button_pressed"]
